argo-deployment/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd 
  labels:
    name: argocd
