argo-deployment/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations: 
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
    - host: argo.noahtutt.dev
      http: 
        paths:
        - backend:
            service: 
              name: argocd-server
              port:
                name: http
          path: / 
          pathType: Prefix
  tls:
    - hosts:
      - argo.noahtutt.dev
      secretName: tls-argocd-server
